Fixed Settings Menu clipping

--- a/styles/Popup.module.css
+++ b/styles/Popup.module.css
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: center;
     margin: 0 auto;
+    z-index: 99;
 }
 .popup {
     position: fixed;
